--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "docker:build": "docker build -t meetmind-worker -f ./apps/worker/Dockerfile ."
   },
   "devDependencies": {
     "prettier": "^3.5.0",
