--- a/.github/cdk-deploy.yaml
+++ b/.github/cdk-deploy.yaml
@@ -5,14 +5,14 @@ on:
     branches:
       - main
     paths:
-      - 'packages/iac/**'
+      - 'iac/**'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: packages/iac
+        working-directory: iac
 
     steps:
       - name: Checkout repository
@@ -23,25 +23,25 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: packages/iac/package-lock.json
+          cache-dependency-path: iac/package-lock.json
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: us-east-1
 
       - name: Install dependencies
+        working-directory: iac
         run: npm ci
 
-      - name: Build
-        run: npm run build
-
       - name: CDK Bootstrap
+        working-directory: iac
         run: npx cdk bootstrap
 
       - name: CDK Deploy
+        working-directory: iac
         run: npx cdk deploy --require-approval never
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
