--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -3,24 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node main.ts",
-    "build": "tsup ./src/index.ts"
+    "build": "tsup ./src/index.ts",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ai-sdk/google": "^1.1.16",
     "@aws-sdk/client-lambda": "^3.750.0",
     "@aws-sdk/client-s3": "^3.750.0",
     "@libsql/client": "^0.14.0",
     "@meetmind/db": "*",
+    "ai": "^4.1.45",
     "dotenv": "^16.4.7",
     "fluent-ffmpeg": "^2.1.3",
     "groq-sdk": "^0.15.0",
     "ts-node": "^10.9.2",
-    "tsup": "^8.3.6"
+    "tsup": "^8.3.6",
+    "vitest": "^3.0.6",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
