--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "docker:build": "docker build -t meetmind-worker -f ./apps/worker/Dockerfile ."
+    "docker:build": "docker build -t meetmind-worker -f ./apps/worker/Dockerfile .",
+    "start": "turbo run start"
   },
   "devDependencies": {
     "prettier": "^3.5.0",
