--- a/apps/worker/.env.development
+++ b/apps/worker/.env.development
@@ -3,4 +3,4 @@ TURSO_DATABASE_URL=
 TURSO_AUTH_TOKEN=
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=AKIAVPYSAB4IH7UBTVU2
+AWS_SECRET_ACCESS_KEY=
