feat(worker): implement audio chunk splitting by using chunk length and overlapping params

--- a/apps/web/docker-compose.yml
+++ b/apps/web/docker-compose.yml
@@ -5,8 +5,12 @@ services:
     build:
       context: ../..
       dockerfile: ./apps/web/Dockerfile
+      args:
+        TURSO_AUTH_TOKEN: ${TURSO_AUTH_TOKEN}
+        TURSO_DATABASE_URL: ${TURSO_DATABASE_URL}
     ports:
       - '3003:3003'
     env_file:
       - .env.development
     command: npm run start
+    restart: always
