--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -10,9 +10,13 @@ COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/package-lock.json ./package-lock.json
 RUN npm i
 COPY --from=builder /app/out/full/ .
+
+RUN cp ./apps/web/.env.development ./apps/web/.env
+
 RUN npm run build -- --filter=web
 
 FROM node:22 AS runner
+
 WORKDIR /app
 COPY --from=installer /app .
 CMD [ "npm", "run", "start", "-w", "web" ]
