--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -16,11 +16,12 @@
     "@aws-sdk/client-lambda": "^3.750.0",
     "@aws-sdk/client-s3": "^3.750.0",
     "@libsql/client": "^0.14.0",
-    "db": "*",
     "ai": "^4.1.45",
+    "db": "*",
     "dotenv": "^16.4.7",
     "fluent-ffmpeg": "^2.1.3",
     "groq-sdk": "^0.15.0",
+    "p-limit": "^6.2.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.6",
     "vitest": "^3.0.6",
