--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^16.4.7",
     "fluent-ffmpeg": "^2.1.3",
     "groq-sdk": "^0.15.0",
+    "node-telegram-bot-api": "^0.66.0",
     "p-limit": "^6.2.0",
+    "serialize-error": "^12.0.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.6",
     "vitest": "^3.0.6",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
-    "@types/fluent-ffmpeg": "^2.1.27"
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/node-telegram-bot-api": "^0.64.7"
   }
 }
