--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@ai-sdk/google": "^1.1.16",
     "@ai-sdk/react": "^1.1.17",
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
@@ -23,11 +25,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "db": "*",
     "drizzle-orm": "^0.39.3",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
+    "next-themes": "^0.4.6",
     "nuqs": "^2.4.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
