--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,6 +4,13 @@
   "main": "dist/index.js",
   "types": "./src/index.ts",
   "typings": "./src/index.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./src/index.ts"
+    },
+    "./schema": "./src/schema.ts"
+  },
   "scripts": {
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
