--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@repo/ui": "*",
     "@tanstack/react-table": "^8.21.2",
     "ai": "^4.1.45",
