--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -19,6 +19,7 @@
     "ai": "^4.1.45",
     "db": "*",
     "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "fluent-ffmpeg": "^2.1.3",
     "groq-sdk": "^0.15.0",
     "node-telegram-bot-api": "^0.66.0",
