--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-lambda": "^3.750.0",
     "@aws-sdk/client-s3": "^3.750.0",
     "@libsql/client": "^0.14.0",
+    "@upstash/redis": "^1.34.6",
     "ai": "^4.1.45",
     "db": "*",
     "dotenv": "^16.4.7",
